@@ -3,8 +3,6 @@ TO DO
 Note that this is not a complete to do list. It mostly only lists bugs
 and quirks that I need to fix eventually.
 
-- sort fold handler list
-- scrolling problem still there
 - fix double slash in path bug
 - thread safety problem in VFSManager.waitForRequests()
 - print qq{ $key="$attributes->{$key}"}; in perl
